[package]
name = "weise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
chrono = "0.4.19"
dirs = "3.0.2"
regex = "1.5.4"
serde = "1.0.126"
serde_json = "1.0.64"
structopt = "0.3.22"
tantivy = "0.15.3"
tantivy-jieba = "0.5.0"
thirtyfour = "0.26.0"
tokio = "1.9.0"
