[package]
name = "weise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
chrono = "0.4.19"
clap = { version = "3", features = ["derive", "env"] }
dirs = "3.0.2"
env_logger = "0.9.0"
log = "0.4"
regex = "1.5.4"
rusqlite = "0.26"
serde = "1.0.126"
serde_json = "1.0.64"
tantivy = "0.15.3"
tantivy-jieba = "0.5.0"
thirtyfour = "0.26.0"
tokio = "1.9.0"
